yamls/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: / 
spec:
  ingressClassName: nginx
  rules:
  - host: ghost.192.168.97.22.nip.io
    http:
      paths:
      - backend:
          service:
            name: nginx-svc
            port:
              number: 80
        path: /echo
        pathType: Prefix
